--- a/web/index.html
+++ b/web/index.html
@@ -53,6 +53,8 @@
 </head>
 <body>
   
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbMBGpeFPaEGFa2QlurJIBaoSt_cbx3zc"></script>
+  
   
   
   <script>
